--- a/FrontEnd/HTML/index.html
+++ b/FrontEnd/HTML/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <p>This is my first code.</p>
+    <!-- This is my comment.
+     HTML is a markup language. -->
+    <p>Another Paragraph.</p>
+    <!-- Attribute:-  provide additional information about an HTML element. They are special words used within the opening tag of an element to modify its behavior, appearance, or functionality.  -->
+    <!-- Example:- <tag attribute="value"> Text Content </tag> -->
+     <a href="http://google.com"></a>
+</body>
+</html>
