--- a/FrontEnd/HTML/Tags.html
+++ b/FrontEnd/HTML/Tags.html
@@ -40,5 +40,33 @@
       <i>Italic Tag</i> <br>
       <u>UnderLine Tag</u> <br><br>
       <s>Strike Through</s>
+
+      <!-- Pre Tag:- Preserved Text Formatting. Maintains whitespace and line breaks. Useful for displaying code.-->
+       <pre>
+            Sale Sale !!
+
+              50% Discount
+       </pre><hr>
+       <big>This is Big Tag.</big><br>
+       <small>This is Small Tag.</small><hr>
+
+       <!-- SuperScript:- <sup> makes text superscript.
+            SubScript:- <sub> makes text subscript.  Used for mathematical equations, footnotes. Does not change font size, just position. -->
+
+                <p>(a+b)2 = (a)2 + (b)2 + 2ab</p>
+                <p>Now doing with superscript tag.</p>
+                <p>(a+b)<sup>2</sup> = (a)<sup>2</sup> + (b)<sup>2</sup> + 2ab.</p><hr>
+            
+                <!-- Subscript. -->
+                 <p>CH4 + O2 => H2O + CO2</p>
+                 <P>Now doing with SubScript Tag.</P>
+                 <p>CH<sub>4</sub> + O<sub>2</sub> => H<sub>2</sub>O + CO<sub>2</sub></p> <hr>
+
+                 <!-- Character Entity Tag:- It is used to display reserved or special characters.
+                  Syntax often starts with & and ends with ; (eg:- &amp; for &) -->
+
+                  <!-- For Space ==> &nbsp;   For CopyrightSymbol ==> &copy;  For TradeMark ==> &trade;
+                    For - ==> &ndash;   For ...  ==> &hellip;   and many more...
+                   -->
     </body>
 </html>
