--- a/FrontEnd/HTML/Forms/Forms.html
+++ b/FrontEnd/HTML/Forms/Forms.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forms</title>
+</head>
+<body>
+    <h1>FORMS</h1>
+    <form action="www.google.com"">
+        UserName: <input type="text" placeholder="Enter Your Name Here...." required> <br> <br>
+        Password: <input type="password" placeholder="Enter Your Password Here...." required> <br><br>
+        <input type="Submit">
+    </form>
+</body>
+</html>
