--- a/FrontEnd/JavaScript/IF-ELSE/If-else.html
+++ b/FrontEnd/JavaScript/IF-ELSE/If-else.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IF-ELSE</title>
+</head>
+<body>
+  <!-- Check conditon for Drive -->
 
+  <script>
+    let age = 14;
+    if(age>=18){
+      console.log("Congrats!! You are eligible for the Drive...");
+    }else{
+      console.log(`Oops, You are shorter ${18-age} years.`);
+    }
+
+    // Output:
+    // Oops, You are shorter 4 years.
+
+  </script>
+</body>
+</html>
