--- a/FrontEnd/JavaScript/Functions/Function1.html
+++ b/FrontEnd/JavaScript/Functions/Function1.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Functions</title>
+</head>
+<body>
+  <script>
+    // Function:- Block of reuseable code.It follows "DRY" Principal- Don't Repeat Tourself.
+    // Use Function keyword to declare. 
 
+    // function printAge(age){
+    //   console.log(`Your Age is ${age}`);
+    // }
+    // printAge(12);
+
+    // Output:
+    // Your Age is 12
+// OR
+
+    let age = 18;
+    function printAge(){
+      console.log(`Your Age is ${age}`);
+    }
+    printAge();
+    age =45;
+    printAge();
+
+    // Output:
+    // Your Age is 18
+    // Your Age is 45
+    
+  </script>
+</body>
+</html>
